# GL-doodle

./: .gitignore  .gitmodules  README.md
GL_Test/: CMakeLists.txt  GL_Test.sln  PROJECT_OPTIONS.h.in
GL_Test/Debug/: GL_Test.ilk
GL_Test/GL_Invaders/: CMakeLists.txt  GL_Invaders.vcxproj  GL_Invaders.vcxproj.filters  fs.glsl  main.cpp  obj_cube  obj_diamond  obj_pyramid  obj_rect  shader_utils.cpp  vs.glsl
GL_Test/GL_RendererDoodle/: Asset.cpp  Asset.h  BVHTree.cpp  BVHTree.h  BlinnPhong.fs  BlinnPhong.vs  CMakeLists.txt  Camera.h  DefaultScene.cpp  FlatSceneNode.h  Image.cpp  Image.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PhongMaterial.cpp  PhongMaterial.h  Primitive.cpp  Primitive.h  README  RenderOpenGL.cpp  RenderOpenGL.h  RenderRaytracer.cpp  RenderRaytracer.h  Sampler.h  Scene.cpp  Scene.h  ScenePython.cpp  SceneUtil.cpp  SceneUtil.h  Texture.h  fs.glsl  main.cpp  screenquad.fs  screenquad.vs  screenquadv2.fs  shader_utils.cpp  shader_utils.h  vs.glsl
GL_Test/GL_RendererDoodle/Assets/: DepthOnlyShader.fs  DepthOnlyShader.vs  PBRBaseShader.fs  Phong.fs  Phong.vs  PhongBaseShader.fs  PhongUberShader.fs  PhongUberShader.vs  iblPreprocessing.fs  iblPreprocessing.vs  particleShader.fs  particleShader.vs  particleShaderSpark.fs  skyboxShader.fs  skyboxShader.vs  skyboxShaderGradient.fs  sphereToCubeTranslation.fs  sphereToCubeTranslation.vs
GL_Test/GL_SkeletalAnimationTest/: CMakeLists.txt  DAE_utils.cpp  DAE_utils.h  GL_SkeletalAnimationTest.vcxproj  GL_SkeletalAnimationTest.vcxproj.filters  armature_utils.cpp  armature_utils.h  file_utils.cpp  file_utils.h  fs.glsl  main.cpp  mesh_utils.cpp  mesh_utils.h  object  shader_utils.cpp  shader_utils.h  simpleSkel.dae  skeletonTest.dae  skelmesh_fs.glsl  skelmesh_fs_debug.glsl  skelmesh_vs.glsl  skelmesh_vs_debug.glsl  t2.dae  untitled.dae  vs.glsl  vs_debug.glsl  what.dae  what2.dae
GL_Test/GL_Test/: CMakeLists.txt  GL_Test.vcxproj  GL_Test.vcxproj.filters  fs.glsl  fs2.fs  main.cpp  object  shader_utils.cpp  shader_utils.h  vs.glsl
GL_Test/GL_Test/Debug/: vc140.idb
GL_Test/GL_Test/Debug/GL_Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GL_Test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GL_Test/RayTracer/: CMakeLists.txt  main.cpp  screenquad.fs  screenquad.vs  shader_utils.cpp
GL_Test/SimpleGame/: CMakeLists.txt  Entity.cpp  Entity.h  OctTree.cpp  OctTree.h  SimpleGame.vcxproj  SimpleGame.vcxproj.filters  collision_utils.cpp  collision_utils.h  fs.glsl  fs_wireframe.glsl  main.cpp  mesh_utils.cpp  mesh_utils.h  shader_utils.cpp  text_fs.glsl  text_utils.cpp  text_utils.h  text_vs.glsl  vs.glsl  vs_wireframe.glsl
GL_Test/XML_readingtest/: main.cpp
